styles/subscription.css
/* ... */
/* Small devices (portrait tablets and large phones, 600px and up) */
@media (min-width: 600px) {
    .discountGif {
        margin-top: -55px !important;
    }
    #discountGifunlimited {
        margin-left:-270px !important;
        position: absolute;
        width: auto !important;
        height: auto !important;
        padding: 5px 20px !important;
        margin-top: -55px !important;
        white-space: nowrap;
    }
}

/* Medium devices (landscape tablets, 768px and up) */
@media (min-width: 768px) {
    .discountGif {
        margin-top: -55px !important;
    }
    #discountGifunlimited {
        margin-left:-300px !important;
        position: absolute;
        width: auto !important;
        height: auto !important;
        padding: 5px 20px !important;
        margin-top: -50px !important;
        white-space: nowrap;
    }
}

/* Large devices (laptops/desktops, 992px and up) */
@media (min-width: 992px) {
    .discountGif {
        margin-top: -50px !important;
    }
    #discountGifunlimited {
        margin-left:-330px !important;
        position: absolute;
        width: auto !important;
        height: auto !important;
        padding: 5px 20px !important;
        margin-top: -50px !important;
        white-space: nowrap;
    }
}

/* Extra large devices (large laptops and desktops, 1200px and up) */
@media (min-width: 1200px) {
    .discountGif {
        margin-top: -50px !important;
    }
    #discountGifunlimited {
        margin-left:-330px !important;
        position: absolute;
        width: auto !important;
        height: auto !important;
        padding: 5px 20px !important;
        margin-top: -50px !important;
        white-space: nowrap;
    }
}


.moveright {
    animation-name: moveright;
    animation-duration: 0.3s;
    animation-iteration-count:1;
    animation-fill-mode: forwards ;
    display: flex;
    flex-direction: column;
}

@keyframes moveright {
    0% {  
        transform: translateX(0%);
        position: absolute; 
        opacity: 1;
        visibility: visible;
    }
    100% { 
        transform: translateX(100%); 
        position: absolute;
        display: none;
        opacity: 0;
        visibility: hidden;
    }
}

@-webkit-keyframes moveright {
    0% {  
        -webkit-transform: translateX(0%);
        position: absolute; 
        opacity: 1;
        visibility: visible;
    }
    100% { 
        -webkit-transform: translateX(100%); 
        position: absolute;
        display: none;
        opacity: 0;
        visibility: hidden;
    }
}

.moveleft {
    animation-name: moveleft;
    animation-duration: 0.5s;
    animation-iteration-count: 1;
    animation-fill-mode: forwards;
    display: flex;
    flex-direction: column;
}

@keyframes moveleft {
    0% {  
        transform: translateX(-100%); 
        position: absolute;
    }
    100% { 
        transform: translateX(0%);
    }
}

.marginTop-45 {
    margin-top: -45px;
}

.height40 {
    height: 45px;
    padding-top: 6px;
}

.height45 {
    height: 45px;
}

.marginLeft15P {
    margin-left: 18%;
}

.marginLeft5P {
    margin-left: 8%;
}

@media (max-width: 768px) {
    .marginTop-45 {
        margin-top: -25px;
    }
}

@media (max-width: 631.1px) {
    
    .marginLeft15P {
        margin-left: 15%;
    }
    
    .marginLeft5P {
        margin-left: 7%;
    }

    .slider::-moz-range-thumb {
        width: 35px;
        height: 110px;
    }
      
    .slider::-webkit-slider-thumb {
        width: 35px;
        height: 90px;
    }

    .monterRange {
        padding: 0px 10px !important;
        margin-top: -30px !important;
    }
}

@media (max-width: 460px) {
    .marginLeft5P {
        margin-left: 5%;
    }
}

@media (max-width: 400px) {
    .marginLeft5P {
        margin-left: 5%;
    }

    .marginLeft15P {
        margin-left: 13%;
    }
}

.opacity0 {
    opacity: 0;
}

.height130px {
    height: 130px;
}

.overflowXHidden {
    overflow-x: hidden;
}


.marginTop-67 {
    margin-top: -67px !important;
}
.marginTop-5 {
    margin-top: 5px !important;
}




@media (max-width: 500px) {
    .font12 {
        font-size: 8px !important;
        line-height: 8px !important;  
    }
    .font8 {
        font-size: 6px !important;
        line-height: 5px !important;  
    }

    .width100 {
        width: 80px !important;
    }
}


@media (max-width: 380px) {
    .font8 {
        font-size: 4.25px !important;
        line-height: 5px !important;  
    }
}

.w1000 {
    width: 1000px;
}

@media (max-width: 1000px) {
    .w1000 {
        width: 100% !important;
    }
}

@media (min-width: 767.9px) {
    .visibleHideInDesktop {
        visibility: hidden;
    } 
}

.sliderDefaultHeight {
    height: 640px; 
    overflow: hidden
}

@media (max-width: 1198.9px) {
    .sliderDefaultHeight {
        height: 600px !important; 
    }
}

@media (max-width: 991.9px) {
    .sliderDefaultHeight {
        height: 580px !important; 
    }
}

@media (max-width: 767.9px) {
    .sliderDefaultHeight {
        height: 785px !important;
    }
}

@media (max-width: 575.9px) {
    .sliderDefaultHeight {
        height: 765px !important;
    }
}

@media (max-width: 349.9px) {
    .sliderDefaultHeight {
        height: 750px !important;
    }
}

.font8 {
    font-size: 10px !important;
    line-height: 9px !important;
}

@media (max-width: 380px) {
    .font8 {
        font-size: 4.25px !important;
        line-height: 5px !important;  
    }
}

@media (max-width: 500px) {
    .font8 {
        font-size: 8px !important;
        line-height: 5px !important;  
    }
}

.unlimited-star {
    color: red;
}



   

  #overlay-msg{
    display: none;
    background:transparent;
    top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
    z-index:2;
    position: fixed !important; 
  }
/* ... */

